apps/20-media/sabnzbd/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  template:
    spec:
      volumes:
        - name: config-patcher
          configMap:
            name: sabnzbd-config-patcher
      containers:
        - name: sabnzbd
