apps/20-media/sabnzbd/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  template:
    spec:
      containers:
      - name: sabnzbd
        resources:
          limits:
            cpu: 500m
            memory: 354Mi
          requests:
            cpu: 23m
            memory: 236Mi
