apps/20-media/sabnzbd/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  labels:
    vixens.io/tier: "diamond"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: SABnzbd
    gethomepage.dev/icon: sabnzbd.png
    gethomepage.dev/group: Media
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: sabnzbd.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: http
  tls:
    - hosts:
        - sabnzbd.truxonline.com
      secretName: sabnzbd-tls
